{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 20,
  "lineage": "8b2996c5-6bf1-361b-e0e9-bf6668f513c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f637f1cf6b8bcf15",
            "domain": "vpc",
            "id": "eipalloc-0f637f1cf6b8bcf15",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-156-211.compute-1.amazonaws.com",
            "public_ip": "52.22.156.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:internet-gateway/igw-0155077917d3c807e",
            "id": "igw-0155077917d3c807e",
            "owner_id": "736116236436",
            "vpc_id": "vpc-06fb22ee3de2f43e4"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f637f1cf6b8bcf15",
            "association_id": "eipassoc-0d4262bf1d769e85b",
            "connectivity_type": "public",
            "id": "nat-0aa012095c9efe850",
            "network_interface_id": "eni-00625440cd2e8f774",
            "private_ip": "12.0.1.209",
            "public_ip": "52.22.156.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0919ed53397b28a84"
          },
          "dependencies": [
            "aws_eip.test_eip",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test_private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0956597ecf8c1d2661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aa012095c9efe850",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0956597ecf8c1d266",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test_eip",
            "aws_nat_gateway.test_nat_gateway",
            "aws_route_table.test_private_route_table",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:route-table/rtb-0956597ecf8c1d266",
            "id": "rtb-0956597ecf8c1d266",
            "owner_id": "736116236436",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fb22ee3de2f43e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:route-table/rtb-00fb81024d0296e55",
            "id": "rtb-00fb81024d0296e55",
            "owner_id": "736116236436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0155077917d3c807e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fb22ee3de2f43e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767598049a259f66",
            "route_table_id": "rtb-0956597ecf8c1d266",
            "subnet_id": "subnet-010efc7bb5dd6d859"
          },
          "dependencies": [
            "aws_route_table.test_private_route_table",
            "aws_subnet.test_private_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb771f5568ebac3",
            "route_table_id": "rtb-00fb81024d0296e55",
            "subnet_id": "subnet-0919ed53397b28a84"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_public_route_table",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:subnet/subnet-010efc7bb5dd6d859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010efc7bb5dd6d859",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736116236436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06fb22ee3de2f43e4"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:subnet/subnet-0919ed53397b28a84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0919ed53397b28a84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736116236436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06fb22ee3de2f43e4"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:vpc/vpc-06fb22ee3de2f43e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-05979c2d6ac0e2ca2",
            "default_route_table_id": "rtb-04f1dd2dcfe356bac",
            "default_security_group_id": "sg-0cec03e069cdc444a",
            "dhcp_options_id": "dopt-0225a1f823354f824",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fb22ee3de2f43e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f1dd2dcfe356bac",
            "owner_id": "736116236436"
          }
        }
      ]
    }
  ]
}